# School21

./: .gitignore  README.md  ft_print_alphabet.c  norminette
Fillit/: Makefile
Fillit/Libft/: ft_isalpha.c  ft_memdel.c  ft_strstr.c
Fillit/includes/: map.h  solver.h  (+2 more)
GNL/: a.out  get_next_line.c  get_next_line.h  input.txt  main.c  read.c  test_gnl
Libft/: Makefile  a.out  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lst_pushback.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstinsert.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_mem.c  ft_memalloc.c  ft_memccpy.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_print.c  ft_print.h  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  (+25 more)
Piscine Reloaded/: Makefile  a.out  exo.tar  ft_count_if.c  ft_div_mod.c  ft_foreach.c  ft_ft.c  ft_is_negative.c  ft_iterative_factorial.c  ft_print_alphabet.c  ft_print_params.c  ft_putchar.c  ft_range.c  ft_recursive_factorial.c  ft_sort_params.c  ft_sqrt.c  ft_strcmp.c  ft_strdup.c  ft_strlen.c  ft_swap.c  max.c
Printf/: Makefile  author
Push_Swap/: .gitignore  CMakeLists.txt  Makefile
Push_Swap/Libft/: CMakeLists.txt  Makefile  algorithms.h  ft_algorithms.h  ft_printf.h  get_next_line.h  libft.h
Push_Swap/Libft/algorithms_src/: quick_sort.c  radix_sort.c  selection_sort.c
Push_Swap/Libft/libft_src/: ft_atoi_safe.c  ft_isascii.c  ft_isprint.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_putchar.c  ft_putchar_fd.c  ft_strchr.c  ft_strdup.c  ft_strmap.c  get_next_line.c  quick_sort.c  radix_sort.c  selection_sort.c
Push_Swap/Libft/printf_includes/: flags_describer.h  specifier_handlers.h  t_buffer.h
Push_Swap/Libft/printf_src/: buffer_t.c  flags_describer.c  print_format_decimal.c  process_visuals.c  utils.c  utils_dtoa.c  visual_codes.c
Push_Swap/include/Checker/: checker.h
Push_Swap/include/IntStack/: IntNode.h  IntStack.h
Push_Swap/include/Push_Swap/: Push_Swap.h  push_swap.h
Push_Swap/include/StackPair/: StackPair.h  stack_pair.h
Push_Swap/include/StackPair/IntStack/: IntStack.h  int_node.h  int_stack.h
Push_Swap/src/Checker/: checker.c  checker_invalid.c  checker_main.c
Push_Swap/src/IntStack/: IntNode.c  IntStack.c  IntStack_create_free.c  IntStack_extension.c
Push_Swap/src/Push_Swap/: Push_Swap.c  Push_Swap_main.c  Push_Swap_partition.c  Push_Swap_sort.c  push_swap.c  push_swap_main.c  push_swap_partition.c  push_swap_sort.c
Push_Swap/src/StackPair/: Push_cmds.c  ReverseRotate_cmds.c  Rotate_cmds.c  StackPair.c  StackPair_utility.c  Swap_cmds.c  push_cmds.c  reverse_rotate_cmds.c  rotate_cmds.c  stack_pair.c  stack_pair_utility.c  swap_cmds.c
Push_Swap/src/StackPair/IntStack/: IntStack_create_free.c  IntStack_extension.c  int_node.c  int_stack.c  int_stack_create_free.c  int_stack_extension.c
ft_functions/: ft_putstr.c
(+221 files in other folders)
